--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <p class="text-lg secondary-color mt-6 max-w-xl">I'm a <span class="accent-color" id="typing-text"></span><span class="typing-cursor"></span> with a passion for designing and building scalable, secure, and cost-effective cloud solutions.</p>
       <div class="mt-8 space-x-4">
         <a href="mailto:vdhar29@gmail.com" class="cta-button">Email Me</a>
-        <a href="subhankar_dhar_2cv.pdf" download="Subhankar_Dhar_CV.pdf" class="cta-button">Download CV</a>
+        <a href="assets/subhankar dhar 2cv.pdf" download="Subhankar_Dhar_CV.pdf" class="cta-button">Download CV</a>
       </div>
     </div>
   </section>
@@ -157,7 +157,7 @@
     <h2 class="section-heading">Where I've Worked</h2>
     <div class="max-w-3xl space-y-8">
         <div class="p-6 rounded-lg card-hover">
-            <h3 class="text-xl font-bold text-gray-900">Cloud Administrator <span class="accent-color">@ Multitech Solutions</span></h3>
+            <h3 class="text-xl font-bold text-gray-900">Cloud Administrator <span class="accent-color">@ Multi tech Solutions</span></h3>
             <p class="secondary-color text-sm mb-4">Sep 2025 - Present</p>
             <ul class="space-y-2 text-base secondary-color">
                 <li class="flex"><span class="accent-color mr-3 mt-1">▹</span>Assisted in the deployment, configuration, and maintenance of Microservices and API deployments using Kubernetes.</li>
@@ -190,10 +190,10 @@
           </div>
           <div class="p-6 rounded-lg card-hover">
             <h3 class="font-semibold text-gray-900 text-xl mb-2">Certifications</h3>
-            <ul class="secondary-color space-y-1 mt-2">
-                <li>OCI Generative AI Professional</li>
-                <li>OCI Architect Associate</li>
-                <li>OCI Foundations Associate</li>
+            <ul class="secondary-color space-y-2 mt-2">
+                <li><a href="assets/OCI_Generative_AI_Professional.pdf" download="OCI_Generative_AI_Professional.pdf" class="hover:text-blue-500 hover:underline flex items-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg>OCI Generative AI Professional</a></li>
+                <li><a href="assets/OCI_Architect_Associate.pdf" download="OCI_Architect_Associate.pdf" class="hover:text-blue-500 hover:underline flex items-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg>OCI Architect Associate</a></li>
+                <li><a href="assets/OCI_Foundations_Associate.pdf" download="OCI_Foundations_Associate.pdf" class="hover:text-blue-500 hover:underline flex items-center"><svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg>OCI Foundations Associate</a></li>
             </ul>
           </div>
         </div>
