main page added

--- a/index.html
+++ b/index.html
@@ -108,15 +108,20 @@
 <main class="container mx-auto px-6">
 
   <!-- Hero Section -->
-  <section id="home" class="min-h-screen flex flex-col justify-center pt-24 pb-16">
-    <div>
-      <p class="accent-color text-lg mb-4">Hi, my name is</p>
-      <h1 class="text-4xl md:text-7xl font-extrabold text-gray-900">Subhankar Dhar.</h1>
-      <h2 class="text-3xl md:text-5xl font-extrabold secondary-color mt-2">I build things for the cloud.</h2>
-      <p class="text-lg secondary-color mt-6 max-w-xl">I'm a <span class="accent-color" id="typing-text"></span><span class="typing-cursor"></span> with a passion for designing and building scalable, secure, and cost-effective cloud solutions.</p>
-      <div class="mt-8 space-x-4">
-        <a href="mailto:vdhar29@gmail.com" class="cta-button">Email Me</a>
-        <a href="assets/subhankar dhar 2cv.pdf" download="Subhankar_Dhar_CV.pdf" class="cta-button">Download CV</a>
+  <section id="home" class="min-h-screen flex items-center pt-24 pb-16">
+    <div class="grid md:grid-cols-2 gap-10 items-center">
+      <div>
+        <p class="accent-color text-xl mb-4">Hi, my name is</p>
+        <h1 class="text-5xl md:text-8xl font-extrabold text-gray-900">Subhankar Dhar.</h1>
+        <h2 class="text-4xl md:text-6xl font-extrabold secondary-color mt-2">I build things for the cloud.</h2>
+        <p class="text-xl secondary-color mt-6 max-w-xl">I'm a <span class="accent-color" id="typing-text"></span><span class="typing-cursor"></span> with a passion for designing and building scalable, secure, and cost-effective cloud solutions.</p>
+        <div class="mt-8 space-x-4">
+          <a href="mailto:vdhar29@gmail.com" class="cta-button">Email Me</a>
+          <a href="assets/subhankar dhar 2cv.pdf" download="Subhankar_Dhar_CV.pdf" class="cta-button">Download CV</a>
+        </div>
+      </div>
+      <div class="hidden md:block">
+        <img src="assets/me1.png" alt="Subhankar Dhar" class="rounded-full shadow-2xl mx-auto" style="width: 400px; height: 400px; object-fit: cover;">
       </div>
     </div>
   </section>
@@ -145,7 +150,7 @@
             </div>
             <div class="md:col-span-2">
                 <div class="w-full max-w-sm mx-auto rounded-lg border-4 border-blue-200 group shadow-lg">
-                    <img src="https://placehold.co/500x500/ffffff/333333?text=Subhankar" alt="Subhankar Dhar" class="rounded-md transition duration-300 group-hover:-translate-x-2 group-hover:-translate-y-2">
+                    <img src="assets/mea.png" alt="Subhankar Dhar" class="rounded-md transition duration-300 group-hover:-translate-x-2 group-hover:-translate-y-2">
                 </div>
             </div>
         </div>
