--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <div class="hidden md:flex space-x-8 items-center">
       <a href="#about" class="text-gray-700 hover:text-[#007bff] transition">About</a>
       <a href="#experience" class="text-gray-700 hover:text-[#007bff] transition">Experience</a>
+       <a href="youtube.html" class="text-gray-700 hover:text-[#007bff] transition">Youtube</a>
       <a href="#skills" class="text-gray-700 hover:text-[#007bff] transition">Skills</a>
       <a href="#contact" class="text-gray-700 hover:text-[#007bff] transition">Contact</a>
     </div>
@@ -100,6 +101,7 @@
   <div id="mobile-menu" class="hidden md:hidden px-6 pb-4 bg-white">
     <a href="#about" class="block py-2 text-gray-700 hover:text-[#007bff]">About</a>
     <a href="#experience" class="block py-2 text-gray-700 hover:text-[#007bff]">Experience</a>
+    <a href="#youtube.html" class="text-gray-700 hover:text-[#007bff] transition">Youtube</a>
     <a href="#skills" class="block py-2 text-gray-700 hover:text-[#007bff]">Skills</a>
     <a href="#contact" class="block py-2 text-gray-700 hover:text-[#007bff]">Contact</a>
   </div>
