--- a/youtube.html
+++ b/youtube.html
@@ -88,30 +88,30 @@
       <!-- Video 1 -->
       <div class="rounded-lg overflow-hidden shadow-lg transform hover:scale-105 transition-transform duration-300">
         <div class="video-container">
-          <iframe src="https://www.youtube.com/embed/37ThYLm0xK8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://youtu.be/ZskiQAcvy9Q?si=bJGypTV4E4tpj-EG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="p-4 bg-white">
-          <h3 class="font-bold text-lg">Deploy Flask App on OCI</h3>
+          <h3 class="font-bold text-lg">Exploring Digha Beach</h3>
         </div>
       </div>
       
       <!-- Video 2 -->
       <div class="rounded-lg overflow-hidden shadow-lg transform hover:scale-105 transition-transform duration-300">
         <div class="video-container">
-          <iframe src="https://www.youtube.com/embed/L06-5o6fW_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://youtu.be/x9IM9ml_H44?si=NRMKrjNKOsyZ-hGf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="p-4 bg-white">
-          <h3 class="font-bold text-lg">Docker App in Kubernetes</h3>
+          <h3 class="font-bold text-lg">Sikkim Bike Trip</h3>
         </div>
       </div>
 
       <!-- Video 3 -->
       <div class="rounded-lg overflow-hidden shadow-lg transform hover:scale-105 transition-transform duration-300">
         <div class="video-container">
-          <iframe src="https://www.youtube.com/embed/Xk-44TzQLqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://youtu.be/lDobhcF61Pc?si=9qfsNxlozMFwgdA6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="p-4 bg-white">
-          <h3 class="font-bold text-lg">Create a Virtual Machine in OCI</h3>
+          <h3 class="font-bold text-lg">Exploring Puri Beach</h3>
         </div>
       </div>
     </div>
